--- a/.classpath
+++ b/.classpath
@@ -33,5 +33,6 @@
 	<classpathentry kind="lib" path="lib/spring-webmvc-portlet-3.2.0.RC1.jar"/>
 	<classpathentry kind="lib" path="lib/swing-layout-1.0.3.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/XeNo/Desktop/aopalliance.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
